# tn5250r

./: .gitignore  ANSI_INPUT_FIX.md  AUTHENTICATION_INVESTIGATION.md  BUG_REPORT_AND_MITIGATION_STRATEGIES.md  BUILD_INSTRUCTIONS.md  CLI_CREDENTIALS_IMPLEMENTATION.md  COMPLETION_SUMMARY.md  CONFIRMED_ISSUES_AND_ROOT_CAUSES.md  CONNECTION_SUCCESS.md  CREDENTIAL_INTEGRATION_COMPLETE.md  CRUSH.md  CURSOR_IMPLEMENTATION.md  Cargo.toml  DEBUG_TROUBLESHOOTING_GUIDE.md  DEVCONTAINER_GUI_FIX_SUMMARY.md  DEVCONTAINER_GUI_SETUP.md  DEVCONTAINER_SETUP.md  ENHANCED_TELNET_SUMMARY.md  ERROR_HANDLING_IMPROVEMENTS_SUMMARY.md  FIELD_ENHANCEMENT_PLAN.md  FIELD_HANDLING_FIXES_SUMMARY.md  FINAL_SUMMARY.md  GUI_ASYNC_FIX.md  GUI_BLOCKING_COMPLETE_FIX_SUMMARY.md  GUI_BLOCKING_FINAL_COMPLETE.md  GUI_BLOCKING_ROOT_CAUSE_ANALYSIS.md  GUI_CPU_SPIN_LOOP_FIX.md  GUI_DATA_VALIDATION_DEBUG_FIX.md  GUI_DEADLOCK_COMPLETE_SUMMARY.md  GUI_FRAMEWORK_EVALUATION.md  GUI_LOCKUP_FIX_SUMMARY.md  GUI_MEMORY_LEAK_OOM_FIX.md  GUI_NONBLOCKING_COMPLETE.md  GUI_TESTING_GUIDE.md  GUI_TESTING_IMPLEMENTATION.md  GUI_TESTING_RESEARCH.md  GUI_TEST_COMPILATION_FIX.md  GUI_THREAD_JOIN_BLOCKING_FIX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  (+47 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: gui-tests.yml
benches/: protocol_bench.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-implement-complete-5250-protocol-parsing.md  TASK002-enhance-field-detection-and-attributes.md  TASK003-expand-telnet-negotiation-features.md  _index.md
scripts/: test-low-mem.sh
src/: ansi_processor.rs  app.rs  app_state.rs  buffer_utils.rs  component_utils.rs  config.rs  connection.rs  constants.rs  controller.rs  cursor_utils.rs  ebcdic.rs  error.rs  error_handling.rs  field_manager.rs  input.rs  keyboard.rs  lib.rs  main.rs  monitoring.rs  network.rs  network_platform.rs  performance_metrics.rs  platform.rs  profile_manager.rs  protocol.rs  protocol_state.rs  session.rs  session_profile.rs  telnet_negotiation.rs  terminal.rs  terminal_display.rs  test_field_detection.rs
src/lib3270/: codes.rs  display.rs  field.rs  mod.rs  protocol.rs
src/lib5250/: codes.rs  display.rs  field.rs  mod.rs  protocol.rs  session.rs  telnet.rs
src/monitoring/: alerting_system.rs  component_signals.rs  integration_monitor.rs  performance_monitor.rs  quality_assurance.rs  runtime_validator.rs  security_monitor.rs
src/protocol_common/: ebcdic.rs  mod.rs  telnet_base.rs  traits.rs
src/tests/: dynamic_sizing_tests.rs
src/ui/: dialogs.rs  function_keys.rs  mod.rs  monitoring_ui.rs  profile_manager_ui.rs
tests/: advanced_subnegotiation.rs  concurrent_processing.rs  enhanced_fields.rs  enhanced_logging_debugging.rs  error_handling_tests.rs  field_handling_fixes.rs  integration_tests.rs  mod.rs  performance_optimization.rs  protocol_error_handling.rs  regression_protocol_tests.rs  session_management_tests.rs  simple_gui_test.rs  structured_fields.rs  telnet_negotiation.rs  tn3270_integration.rs  tn3270e_integration.rs  unit_tests.rs
tests/gui/: README.md  main.rs  test_config.toml
tests/gui/components/: main.rs  mod.rs  test_e2e_scenarios.rs  test_harness.rs  test_ui_components.rs
tests/gui/integration/: main.rs  mock_network.rs  mod.rs  test_connection.rs  test_harness.rs  test_integration_flows.rs
tests/gui/mocks/: mod.rs
tests/gui/utils/: assertions.rs  mod.rs  performance.rs  setup.rs  test_data.rs  visual.rs
tests/gui/visual/: main.rs  mock_network.rs  mod.rs  test_harness.rs  test_visual_regression.rs
tests/mocks/: mock_network.rs  mod.rs
tests/utils/: mod.rs  test_harness.rs
