[package]
name = "tn5250r"
version = "0.1.0"
edition = "2021"
description = "A cross-platform desktop terminal emulator for IBM AS/400 (IBM i) systems"
authors = ["Your Name <your.email@example.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/tn5250r"
homepage = "https://github.com/your-username/tn5250r"
documentation = "https://github.com/your-username/tn5250r#readme"

[dependencies]
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.10"
native-tls = "0.2"
base64 = "0.22"
lazy_static = "1.4"
hostname = "0.4"

openssl-sys = { version = "0.9", features = ["vendored"] }
once_cell = "1.21.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
rand = "0.8"

# Binary target for the desktop application
[[bin]]
name = "tn5250r"
path = "src/main.rs"

# Test binary for TN5250 field input
[[bin]]
name = "tn5250_field_input_test"
path = "src/bin/tn5250_field_input_test.rs"
